--- a/ant/global.properties
+++ b/ant/global.properties
@@ -1,6 +1,6 @@
 xeo.buildnumber=026
 xeo.build=build_${xeo.buildnumber}
 xeo.ver=3_2_${xeo.buildnumber}
-xwc.git=C:\\xeostudio\\workspace-git\\xwc\\.git
-xeo.git=C:\\xeostudio\\workspace-git\\xeo\\.git
+xwc.git=/git-repo/xeo/xeo_v3_core/xeo.git
+xeo.git=/git-repo/xeo/xeo_v3_xwc/xwc.git
 xeo.languages=en,pt,es
