--- a/ant/build.xml
+++ b/ant/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project 	name="XEO 3.1" default="all" basedir=".">
 <property file="global.properties" />
-<property name='global.dir' value='${basedir}\${xeo.ver}\'/>
+<property name='global.dir' value='${basedir}/${xeo.ver}/'/>
 <mkdir dir='${global.dir}' />
 <target name="all" depends="core,xwc"/>
 <!-- Main target -->
