Adicionada a possibilidade de criar uma release a partir de uma dada branch

--- a/ant/global.properties
+++ b/ant/global.properties
@@ -1,6 +1,8 @@
-xeo.buildnumber=026
+xeo.buildnumber=001
 xeo.build=build_${xeo.buildnumber}
-xeo.ver=3_2_${xeo.buildnumber}
-xwc.git=/git-repo/xeo/xeo_v3_xwc/xwc.git
-xeo.git=/git-repo/xeo/xeo_v3_core/xeo.git
+xeo.ver=3_3_${xeo.buildnumber}
+xwc.git=C:\\xeostudio\\workspace-git\\xwc\\.git
+xeo.git=C:\\xeostudio\\workspace-git\\xeo\\.git
 xeo.languages=en,pt,es
+xeo.branch=master
+xwc.branch=html5layout
