--- a/ant/global.properties
+++ b/ant/global.properties
@@ -1,8 +1,9 @@
 xeo.buildnumber=001
 xeo.build=build_${xeo.buildnumber}
 xeo.ver=4_0_${xeo.buildnumber}
-xwc.git=C:\\xeostudio\\workspace-git\\xwc\\.git
-xeo.git=C:\\xeostudio\\workspace-git\\xeo\\.git
+xwc.git=/Users/acruz/git/xwc/.git
+xeo.git=/Users/acruz/git/xeo/.git
 xeo.languages=en,pt,es
 xeo.branch=master
 xwc.branch=html5layout
+java.compiler=/System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Commands/javac
